--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ openai = "^1.52.2"
 pytesseract = "^0.3.13"
 easyocr = "^1.7.2"
 flask = "^3.1.0"
+gunicorn = "^23.0.0"
+boto3 = "^1.37.4"
 
 [build-system]
 requires = ["poetry-core"]
